src/objects/JinyaAutoNumber__c.object
<CustomObject>
    <description>Common Auto number</description>
    <fields>
        <fullName>CommAutoNumber10__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>共通採番１０</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CommAutoNumber1__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>共通採番１</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CommAutoNumber2__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>共通採番２</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PlanNoAutoNumber__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>プラン番号</label>
        <type>AutoNumber</type>
    </fields>
    <label>自動採番</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>自動採番名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>